Condicion añadida para el removeLast, corregido